# sd_land

./: Cargo.toml  features.txt  notes.txt
src/: a  app.rs  background_renderer.rs  buffer.rs  buffer_renderer.rs  buffer_system.rs  camera.rs  colorscheme.rs  cursor.rs  event.rs  file_searcher.rs  graphics.rs  grid_renderer.rs  image.rs  layout.rs  lib.rs  main.rs  material.rs  ml.rs  pipeline.rs  rect.wgsl  renderer.rs  resources.rs  scene.rs  scene_camera.rs  shader_types.rs  shortcuts.rs  sprite.rs  sprite_animator.rs  sprite_renderer.rs  system.rs  text.rs  text_renderer.rs  text_shader.wgsl  theme.rs  ui_box.rs  ui_box_renderer.rs  ui_event_system.rs  untextured.wgsl  view.rs
src/queries/: function.txt  keyword.txt  literal.txt  string.txt  type.txt
src/renderer/: camera.rs  graphics.rs  material.rs  mod.rs  pipeline.rs  primitive.rs  render_api.rs  renderer.rs  shader_types.rs  view.rs
src/shaders/: background.wgsl  blurred.wgsl  instanced_rect.wgsl  rect.wgsl  shader.wgsl  sprite.wgsl  text_shader.wgsl  untextured.wgsl
