[package]
name = "sd_land"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.13.1", features = ["derive"]}
cgmath = "0.18.0"
env_logger = "0.10.0"
font-loader = "0.11.0"
fontdue = "0.7.2"
image = "0.24.5"
itertools = "0.10.5"
legion = "0.4.0"
naga = {version = "0.11.0" }
pollster = "0.3.0"
regex = "1.7.1"
simple-error = "0.3.0"
tree-sitter = "0.20.10"
tree-sitter-highlight = "0.20.1"
tree-sitter-rust = "0.20.3"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics" ]} 
wgpu = "0.15.1"
winit = "0.28.2"
